services/Home Dashboard/20-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: home-dashboard
  labels:
    name: home-dashboard
