services/Home Dashboard/60-ingress-influxdb.yml

apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  namespace: home-dashboard
  name: influxdb-secure
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`${HOME_DASHBOARD_INFLUXDB_DOMAIN}`)
      kind: Rule
      services:
        - name: influxdb
          port: 8086
      middlewares:
        - namespace: traefik
          name: secure-https
  tls:
    secretName: tls-influxdb
